--- a/docs/en-gb/modules/crm/pages/quick-search.adoc
+++ b/docs/en-gb/modules/crm/pages/quick-search.adoc
@@ -1,17 +1,17 @@
 = Quick search
-:keywords: quick search, contact search, address search, GDPR, guest account, guest order, order as guest, ordered as guest, search guest, anonymise customer, delete customer data, delete data record, delete guest, delete contact, download all data, download all customer data, download contact data, contact requests deletion, contact deletion request, customer requests deletions, customer deletion request
+:keywords: quick search, address search, search addresses, GDPR, guest access, guest order, order as a guest, search guest, anonymise customer, anonymise, delete customer data, delete data record, delete customer, delete contact, download all data of customer, download customer data, customer requests deletion of his data
 :description: Learn how to use the quick search in plentymarkets.
 :id: RZPMSR4
 :author: team-crm
 
-Use the quick search to get an overview of all information that is saved for a contact or an address data record of a guest order. Learn on this page of the manual how to xref:crm:download-all-data.adoc#[download all data of a contact or guest order] and how to xref:crm:anonymise-data-record.adoc#[anonymise data records] in compliance with GDPR.
+Use the quick search to get an overview of all information that is saved for a contact or an address data record of a guest order. Learn on this page of the manual how to <<download-all-data#, download all data of a contact or guest order>> and how to <<anonymise-data-record#, anonymise data records>> in compliance with GDPR.
 
 [NOTE]
 .Guest accounts via the plentyShop can only be found in the quick search
 ====
 In order to be able to work GDPR-compliant, no contact data record is created in case of guest orders via the plentyShop. Only the address data is saved. This data that is saved in your plentymarkets system can therefore not be found in the *CRM » Contacts* menu. The address data of the person who ordered as a guest can only be found via the address data in the quick search. +
 
-Further information about converting plentyShop guest orders into regular contact data records can be found in the xref:convert-guest-account:convert-guest-account.adoc#[Converting a guest account into a contact data record] chapter.
+Further information about converting plentyShop guest orders into regular contact data records can be found in the <<convert-guest-account#, Converting a guest account into a contact data record>> chapter.
 ====
 
 [#user-rights]
@@ -41,17 +41,15 @@ Finding data records via the quick search:
 . Click in the line *Orders* to display the orders. +
 → Click in the line of the order to directly access the order in the *Orders » Edit orders* menu.
 . Click in the line *Addresses* to display further addresses. +
-→ Click in the line of the address to directly access the address and edit it.
+→ Click in the line of the address to directly access the address overview and make changes.
 . Click in the line *Messenger* to display the messages. +
-→ Click on *New message* (icon:plus-square[role="green"]). The stop watch in the top right corner starts automatically once you open the message. Click on *Billable* icon:pay_cash[set=plenty] icon:toggle-off[role="red"] to bill the time. +
+→ Click on *New message* (icon:add[set=material]). The stop watch in the top right corner starts automatically once you open the message. Click next to the *Minutes* field on *Billable* (icon:toggle_off[set=material] icon:pay_cash[set=plenty]) to bill the time. +
 *_Note:_* For further information, refer to the xref:crm:messenger.adoc#[Messenger] page.
-. Click in the line *Events* to add new events or to edit existing events. +
-→ Click on *Add event* (icon:plus-square[role="green"]) to save this time. +
-*_Note:_* Events are only available for contact data records, _not_ for guest orders.
+. Click in the line *Events* to add new events or edit existing events. +
+→ Click on *Add event* (icon:add[set=material]) to save this time. +
+→ *_Note:_* Events are only available for contact data records, _not_ for guest orders.
 . Click in the line *Tickets* to display the tickets. +
 → Click in the line of the ticket to directly access the ticket in the *CRM » Ticket system* menu.
-
-
 
 [[table-filter-quick-search]]
 .Quick search filters
@@ -67,22 +65,23 @@ Finding data records via the quick search:
 |Click on icon:undo[role="orange"] to reset the filter criteria set.
 
 | *ID*
-|Each contact automatically receives a consecutive and unique ID. It doesn't matter if the data record was saved manually or automatically. 2 contacts never have the same ID. The ID is always a real number. 00521 or ADF8354 e.g. are invalid. +
+|Each contact automatically receives a consecutive and unique ID. It doesn’t matter if the data record was saved manually or automatically. 2 contacts never have the same ID. The ID is always a real number. For example, 00521 or ABC8354 are therefore invalid. +
 *_Note:_* Click on the arrows (icon:sort[]) next to the ID in the overview to sort the contact data records found in ascending or descending order according to their ID.
 
 | *Name*
-|Enter the first name and/or last name or the name of the account to search for the contact with this name or account name. +
+|Enter the first name and/or last name or the name of the company to search for the contact(s) with this name or company name. +
 *_Note:_* Click on the arrows (icon:sort[]) in the columns *First name* and *Last name* in the overview to show the contact data records found in alphabetical order.
 
 | *Contact data*
-|In this field, you can search for the name, address, account, customer number and eBay name. +
-*_Note:_* In order to search for the eBay name, first enter the parameter *ebay:* of the eBay name that you search for.
+|In this field, you can search for the name, address, company, customer number and eBay name. +
+*_Note:_* In order to search for the eBay name, first enter the parameter `ebay:` followed by the eBay name that you search for.
 
 | *Address*
-|Enter the name of the street and/or the postcode that is saved for the contact. It is also possible to search only for parts of the street and parts of the house number.
+|Enter the street name and/or house number. It is also possible to search only for parts of the street and parts of the house number.
 
 | *Postcode*
-|Enter the postcode that is saved for the contact. The search is also carried out for postcodes that are saved in the address data records of the contact. It is also possible to search only for parts of the postcode.
+|Enter the postcode. +
+*_Note:_* The search is also carried out for postcodes that are saved in the address data records of the contact. It is also possible to search only for parts of the postcode. Enter at least 3 numbers.
 
 | *Town*
 |Enter the town that is saved for the contact. The search is also carried out for towns that are saved in the address data records of the contact. It is also possible to search only for parts of the town.
@@ -94,7 +93,7 @@ Finding data records via the quick search:
 |Enter the telephone number to search for the contact with this number. You can also search for parts of the telephone number. Enter at least 3 numbers.
 
 | *Tags*
-|Select one or more tags to only search for contacts with these tags.
+|Select a tag to only search for contacts with this tag.
 
 | *Country*
 |Select a country to only display contacts from this country. The country is saved within the contact data. +
@@ -120,8 +119,7 @@ Select the setting *All except Germany* to only display contacts from all countr
 |====
 
 [TIP]
-As soon as you open a data record in the *CRM » Quick search* menu, the stop watch in the top right corner starts counting automatically. Click on *Stop* (icon:pause-circle-o[]) to stop the stop watch from counting. Click on *Start* (icon:play-circle[]) to continue counting the time. Click on *Reset* (icon:undo[role="orange"]) to set the time to 0.
-
+When you open a data record in the *CRM » Quick search* menu, you can click on *Start* (icon:play_circle[set=material]) to start the timer. Click on *Pause* (icon:pause_circle[set=material]) to stop the timer. Click on *Reset* (icon:reset[set=plenty]) to set the time to 0.
 
 [#further-settings]
 == Further settings
@@ -130,81 +128,54 @@ When you open a data record in the quick search, you see further possible settin
 
 [[table-settings-quick-search]]
 .Settings in the quick search
-[cols="2,1,6"]
+[cols="2,6"]
 |====
-|Setting |Symbol |Explanation
+|Setting |Explanation
 
-| *Contact ID*
-|
-|Opens the contact data record in the *CRM » Contacts* menu. +
-*_Note:_* If the data record is a guest order, this field is not available.
+| *CONTACT ID*
+|Opens the contact data record in the *CRM » Contacts* menu.
 
-| *Orders*
-|
+| *ORDERS*
 |Opens the *Orders » Edit orders* menu. The ID of the contact is automatically selected as filter. +
-*_Note:_* If the data record is a guest order, this field is not available.
+Click on icon:add[set=material] *New order* right next to *ORDERS* to create a new order in the *Orders » Edit orders* menu.
 
-| *New order*
-|icon:plus-square[role="green"]
-|Creates a new order in the *Orders » Edit orders* menu. +
-*_Note:_* If the data record is a guest order, this field is not available.
-
-| *Offers*
-|
+| *OFFERS*
 |Opens the menu *Orders » Edit orders*. The ID of the contact is automatically selected as filter. +
-*_Note:_* If the data record is a guest order, this field is not available.
+Click on icon:add[set=material] *New offer* right next to *OFFERS* to create a new offer in the *Orders » Edit orders* menu.
 
-| *New offer*
-|icon:plus-square[role="green"]
-|Creates a new offer in the *Orders » Edit orders* menu. +
-*_Note:_* If the data record is a guest order, this field is not available.
+| *MESSENGER*
+|Opens the *Messenger* area further down in this view. +
+Click on icon:add[set=material] *New message* right next to *MESSENGER* to open the editing window for creating a new message further down in this view.
 
-| *Messenger*
-|
-|Opens the *Messenger* area. +
-*_Note:_* If the data record is a guest order, this field is not available.
-
-| *New message*
-|icon:plus-square[role="green"]
-|Creates a new message. +
-*_Note:_* If the data record is a guest order, this field is not available.
-
-| *Tickets*
-|
+| *TICKETS*
 |Opens the *CRM » Ticket system* menu. The ID of the contact is automatically selected as filter. +
-*_Note:_* If the data record is a guest order, this field is not available.
-
-| *New ticket*
-|icon:plus-square[role="green"]
-|Creates a new ticket in the *CRM » Ticket system* menu. +
-*_Note:_* If the data record is a guest order, this field is not available.
-
-
+Click on icon:add[set=material] *New ticket* right next to *TICKETS* to open the editing window for creating a new ticket in the *CRM » Ticket system* menu.
 
 | *Download all data of the contact*
-|icon:download[role="purple"]
-|Downloads all data that is saved for this data record. +
+|Click on icon:file_download[set=material] to download all data that is saved for this data record. +
 Further information can be found in the chapter <<#download-all-data, Downloading all data of a contact or a guest order>>.
 
 | *Send newsletter opt-in email*
-|icon:envelope-o[role="purple"]
-|Sends the email for the newsletter opt-in respectively the confirmation for the newsletter opt-in to the customer. +
+|Click on icon:outgoing_mail[set=material] to send an email for the newsletter opt-in respectively the confirmation for the newsletter opt-in. +
 *_Note:_* If the customer is not registered for the newsletter yet, they will receive the automatic email for newsletter opt-in. If the customer is already registered for the newsletter, but has not confirmed yet, they will receive the confirmation for the newsletter opt-in.
 
 | *Anonymising a data record*
-|icon:user-secret[]
-|Anonymises the data record. Anonymising data is only possible when the data record is a "real" contact and not a guest order. +
+|Click on icon:user-secret[] to anonymise the data record. Anonymising data is only possible when the data record is a "real" contact and _not_ a guest order. +
 For further information, refer to the <<#anonymise-data-record, Anonymising a data record>> chapter.
 
 | *Convert guest into contact*
-|icon:exchange[role="yellow"]
-|Converts the address data from a guest order into a regular contact data record. In the *History* area of the newly created contact data record, the entry *Converted by* as well as the name of the person who converted the data record are added. +
+|Click on icon:swap_horiz[set=material] to convert the address data from a guest order into a regular contact data record. In the *History* area of the newly created contact data record, the entry *Converted by* as well as the name of the person who converted the data record are added. +
 Further information can be found in the <<#convert-guest-account, Converting a guest account into a contact data record>> chapter. +
-*_Note:_* If this is already a contact, the field is not available and the button shows the note *This contact is not a guest*.
+*_Note:_* If this is already a contact, the field is not available.
 
 | *Reload data*
-|icon:undo[]
-|Updates the data from this data record.
+|Click on icon:undo[] to update the data from this data record.
+
+| *Pause* / *Start*
+|Click on icon:pause_circle[set=material] to stop the timer. Click on icon:play_circle[set=material] to start the timer again.
+
+| *Reset*
+|Click on icon:reset[set=plenty] to reset the timer to 0.
 
 |====
 
@@ -224,7 +195,7 @@ Converting a guest account into a contact data record:
 → The data records that correspond to the search criteria entered are displayed.
 . Click in the line of the data record. +
 → The data record opens.
-. In the header, click on *Convert guest to contact* (icon:exchange[role="yellow"]). +
+. In the header, click on *Convert guest to contact* (icon:swap_horiz[set=material]]). +
 → A window appears and you need to confirm your decision. +
 . If you have worked in compliance with GDPR, click on *Convert*. +
 → The data record is converted into a contact data record and automatically obtains the next free contact ID. In the *History* area of the contact data record, the entry *Converted by* as well as the name of the person who converted the data record are added.
@@ -251,7 +222,7 @@ Downloading all data of a contact or guest order:
 → The data records that correspond to the search criteria entered are displayed.
 . Click in the line of the data record. +
 → The overview with the areas *Invoice address*, *Master data* and *Info* appears.
-. Click on *Download all data of the contact* (icon:download[role="purple"]) in the upper line. +
+. Click on *Download all data of the contact* (icon:file_download[set=material]) in the upper line. +
 → A dialogue window appears. Determine a location on your computer where the ZIP file is saved.
 
 Further information about the download file can be found in this link:https://forum.plentymarkets.com/t/dsgvo-button-fuer-den-datenexport-zu-einem-kunden-integriert/486915[changelog^] thread in the plentymarkets forum.
