--- a/docs/de-de/modules/daten/pages/datenlog.adoc
+++ b/docs/de-de/modules/daten/pages/datenlog.adoc
@@ -4,7 +4,7 @@
 :id: 8PM1DPV
 :author: team-plenty-channel
 
-Im Menü unter *Daten » Log* werden alle Log-Einträge angezeigt. Diese Log-Einträge sind für vier Wochen verfügbar, bevor die Einträge gelöscht werden. Logs können einzeln aktiviert werden und zusätzlich kann für jeden Log-Eintrag die Dauer eingestellt werden, mit der festgelegt wird, wie lange der Log-Eintrag aktiv bleiben soll.
+Im Menü *Daten » Log* werden Ereignisse protokolliert, die in deinem System stattfinden. Jeder Log-Eintrag steht für ein Ereignis in deinem System. Die Log-Einträge sind für vier Wochen verfügbar. Danach werden die Einträge automatisch gelöscht. Ereignisse mit den Schweregraden *Error*, *Critical*, *Alert* und *Emergency* werden automatisch protokolliert. Für andere Ereignisse kannst du optional die Protokollierung für einen bestimmten Zeitraum aktivieren.
 
 == Was ist das Daten-Log?
 
@@ -12,6 +12,7 @@ Daten-Log bedeutet auf Deutsch "Datenprotokoll". Im Daten-Log werden also Ereign
 
 * Jeder Log-Eintrag steht für ein Ereignis in deinem System.
 * Jeder Log-Eintrag ist ab dem Ereignis vier Wochen verfügbar. Danach wird der Log-Eintrag automatisch gelöscht.
+* Ereignisse haben verschiedene Schweregrade. In plentymarkets heißen diese Schweregrade "Log-Levels".
 * Ereignisse mit den Log-Levels *Error*, *Critical*, *Alert* und *Emergency* werden automatisch protokolliert.
 * Die Log-Level *Debug*, *Info*, *Notice* und *Warning* müssen aktiviert werden, damit Ereignisse dieser Levels protokolliert werden. (<<#10, Wie?>>)
 * Jeder Log-Eintrag enthält die folgenden Informationen über das Ereignis:
@@ -23,16 +24,35 @@ Daten-Log bedeutet auf Deutsch "Datenprotokoll". Im Daten-Log werden also Ereign
 
 | *Level*
 | Der Schweregrad des Ereignisses +
-(<<#log-levels, Was beuten die Log-Level?>>)
+(<<#log-levels, Was beuten die Log-Levels?>>)
 
 | *Integration*
-| Der Bereich, in dem das Ereignis stattgefunden hat
+| Der Bereich des Systems, in dem das Ereignis stattgefunden hat.
+
+*_Beispiele:_*
+
+* Ceres
+* DHLShipping
+* Etsy
 
 | *Identifikator*
-| Der Unterbereich, in dem das Ereignis stattgefunden hat
+| Der Unterbereich, in dem das Ereignis stattgefunden hat.
 
-| *Referenz*
-| Der Referenztyp mit der entsprechenden ID
+*_Beispiele:_*
+
+* AmazonCatalog
+
+| *Referenztyp*
+| Die Art des Datensatzes
+
+*_Beispiele:_*
+
+* addressID = Adress-ID
+* catalogName = Katalogname
+* etsyListingID = ID des Etsy-Listings
+
+| *Referenzwert*
+| Der Wert des Datensatzes, der vom Ereignis betroffenen ist. Also zum Beispiel die ID eines Artikels, einer Variante oder einer Kategorie.
 
 | *Nachricht*
 | Eine Beschreibung des Ereignisses
@@ -105,10 +125,9 @@ Die Dropdown-Listen enthalten nur Filter für Ereignisse, für die es auch Log-E
 | Der Identifikator gibt an, zu welchem Unterbereich der Log gehört.
 
 | *Level*
-| Ein Level aus der Dropdown-Liste wählen. +
-→ Nur
+| Ein Level aus der Dropdown-Liste wählen.
 
-*_Hinweis:_* Hierfür müssen bereits alle Level aktiv gesetzt sein.
+*_Hinweis:_* Nur Levels werden angezeigt, für die es auch Log-Einträge gibt.
 
 | *Referenztyp*
 | Hier wird der Referenztyp angegeben, zu dem der Eintrag gehört (z.B. VariationID, OrderID etc.).
