--- a/docs/de-de/modules/daten/pages/datenlog.adoc
+++ b/docs/de-de/modules/daten/pages/datenlog.adoc
@@ -17,7 +17,7 @@ Daten-Log bedeutet auf Deutsch "Datenprotokoll". Im Daten-Log werden also Ereign
 * Die Log-Level *Debug*, *Info*, *Notice* und *Warning* müssen aktiviert werden, damit Ereignisse dieser Levels protokolliert werden. (<<#10, Wie?>>)
 * Jeder Log-Eintrag enthält die folgenden Informationen über das Ereignis:
 
-[cols="1,2"]
+[cols="1,2a"]
 |====
 | *Zeitstempel*
 | Das Datum und die Uhrzeit des Ereignisses
@@ -43,13 +43,7 @@ Daten-Log bedeutet auf Deutsch "Datenprotokoll". Im Daten-Log werden also Ereign
 * AmazonCatalog
 
 | *Referenztyp*
-| Die Art des Datensatzes
-
-*_Beispiele:_*
-
-* addressID = Adress-ID
-* catalogName = Katalogname
-* etsyListingID = ID des Etsy-Listings
+| Die Art des Datensatzes: Handelt es sich zum Beispiel um eine Adress-ID, einen Katalognamen oder um die ID des Esy-Listings?
 
 | *Referenzwert*
 | Der Wert des Datensatzes, der vom Ereignis betroffenen ist. Also zum Beispiel die ID eines Artikels, einer Variante oder einer Kategorie.
@@ -62,37 +56,10 @@ Daten-Log bedeutet auf Deutsch "Datenprotokoll". Im Daten-Log werden also Ereign
 | Klicke auf einen Log-Eintrag, um die Detailansicht zu öffnen. Hier findest du weitere Informationen zum Ereignis. In diesem Fenster kannst du auch zum vorherigen oder zum nächsten Log-Eintrag springen. Außerdem kannst du die Informationen einklappen oder ausklappen.
 |====
 
-[#10]
-== Optionale Protokollierung aktivieren
-
-Ereignisse mit den Log-Levels *Error*, *Critical*, *Alert* und *Emergency* werden automatisch protokolliert.
-Damit aber Ereignisse mit den Log-Levels *Debug*, *Info*, *Notice* und *Warning* protokolliert werden, muss die Protokollierung erst aktiviert werden.
-
-* Die Protokollierung endet nach der eingestellten Dauer automatisch.
-
-[.instruction]
-Optionale Protokollierung aktivieren:
-
-. Öffne das Menü *Daten » Log*. +
-→ Alle protokollierten Ereignisse des Standard-Mandanten werden angezeigt.
-. Klicke oben links in der Toolbar auf *Logs konfigurieren* (icon:cog[]). +
-→ Das Fenster *Log-Konfiguration* wird geöffnet. +
-→ Auf der linken Seite werden die Systembereiche und die installierten Plugins angezeigt.
-. Wähle den Bereich, in dem du Logs konfigurieren möchtest. +
-→ Auf der rechten Seite werden die Einstellungen für  diesen Bereich angezeigt.
-. Aktiviere die Option *Aktiv*.
-. Wähle in der Dropdown-Liste *Dauer*, wie lange Ereignisse für diesen Bereich protokolliert werden sollen.
-. Wähle in der Dropdown-Liste *Log-Level*, welche Ereignisse du protokollieren möchtest. +
-<<#log-levels, Was beuten die Log-Level?>>
-. Speichere (icon:save[role="green"]) die Einstellungen. +
-→ Die Protokollierung wird gestartet. +
-→ Die Protokollierung endet nach der eingestellten Dauer automatisch. +
-*_Wichtig:_* Wann der erste Log-Eintrag verfügbar ist hängt davon ab, wann das Ereignis das nächste Mal auftritt, das du protokollierst.
-
 [#20]
-== Liste der Log-Einträge filtern
+== Log-Einträge finden
 
-Wenn du das Menü *Daten » Log* öffnest, wird eine Liste aller protokollierten Ereignisse für den Standardmandanten angezeigt. Diese Liste ist nach Datum und Uhrzeit des Ereignisses sortiert: Das neueste Ereignis steht ganz oben.
+Wenn du das Menü *Daten » Log* öffnest, wird eine Liste aller protokollierten Ereignisse für den Standardmandanten angezeigt. Diese Liste ist nach Datum und Uhrzeit des Ereignisses sortiert. Das neueste Ereignis steht also ganz oben.
 
 Um die Liste der Ereignisse zu reduzieren und übersichtlicher zu machen, kannst du die Log-Einträge filtern.
 
@@ -107,7 +74,9 @@ Liste der Log-Einträge filtern:
 *_Fehlt ein Filter in den Dropdown-Listen?_* +
 Die Dropdown-Listen enthalten nur Filter für Ereignisse, für die es auch Log-Einträge gibt. Wenn also zum Beispiel in der Liste kein eintrag für *OTTO Market* wählbar ist, wurden in den letzten vier Wochen keine Ereignisse für diesen Marktplatz protokolliert.
 . Klicke auf icon:search[role="blue"] *Suchen*. +
-→ Die Log-Einträge werden gefiltert angezeigt.
+→ Die Log-Einträge werden gefiltert angezeigt. +
+*_Du hast den gesuchten Eintrag nicht gefunden?_* +
+ Nicht alle Ereignisse werden standardmäßig protokolliert. Deshalb musst du möglicherweise <<#10, die Protokollierung für das gesuchte Ereignis erst aktivieren>>.
 
 [[log-filter]]
 .Verfügbare Filter
@@ -119,21 +88,30 @@ Die Dropdown-Listen enthalten nur Filter für Ereignisse, für die es auch Log-E
 | Standardmäßig ist als Filter der Standard-Mandant eingestellt. Einen anderen Mandanten aus der Dropdown-Liste wählen, um Ereignisse für diesen Mandanten anzuzeigen.
 
 | *Integration*
-|
+| Der Bereich des Systems, in dem das Ereignis stattgefunden hat.
+
+*_Beispiele:_*
+
+* Ceres
+* DHLShipping
+* Etsy
 
 | *Identifikator*
-| Der Identifikator gibt an, zu welchem Unterbereich der Log gehört.
+| Der Unterbereich, in dem das Ereignis stattgefunden hat.
+
+*_Beispiele:_*
+
+* AmazonCatalog
 
 | *Level*
-| Ein Level aus der Dropdown-Liste wählen.
-
-*_Hinweis:_* Nur Levels werden angezeigt, für die es auch Log-Einträge gibt.
+| Der Schweregrad des Ereignisses. +
+(<<#log-levels, Was beuten die Log-Levels?>>)
 
 | *Referenztyp*
-| Hier wird der Referenztyp angegeben, zu dem der Eintrag gehört (z.B. VariationID, OrderID etc.).
+| Die Art des Datensatzes: Handelt es sich zum Beispiel um eine Adress-ID, einen Katalognamen oder um die ID des Esy-Listings?
 
 | *Referenzwert*
-| Hier wird der Wert der Referenz angegeben. Beispielsweise wäre das beim Referenztyp *ItemID* der Wert dieser ID. Die Suchergebnisse werden auf Treffer mit diesem Wert reduziert.
+| Der Wert des Datensatzes, der vom Ereignis betroffenen ist. Also zum Beispiel die ID eines Artikels, einer Variante oder einer Kategorie.
 
 | *Datum vom*
 | Auf das Kalendersymbol klicken, um ein Datum zu wählen. +
@@ -155,6 +133,34 @@ Die Dropdown-Listen enthalten nur Filter für Ereignisse, für die es auch Log-E
 → Wenn du ein *Datum bis* wählst, werden Ereignisse bis einschließlich dieser Uhrzeit am gewählten Datum angezeigt. +
 → Wenn du kein *Datum bis* wählst, werden Ereignisse bis einschließlich dieser Uhrzeit am heutigen Tag angezeigt.
 |===
+
+[#10]
+== Optionale Protokollierung aktivieren
+
+Ereignisse mit den Log-Levels *Error*, *Critical*, *Alert* und *Emergency* werden automatisch protokolliert.
+Damit aber Ereignisse mit den Log-Levels *Debug*, *Info*, *Notice* und *Warning* protokolliert werden, muss die Protokollierung erst aktiviert werden.
+
+* Die Protokollierung endet nach der eingestellten Dauer automatisch.
+* Du weißt nicht, was du protokollieren musst, und vor lauter Integrationen, Referenztypen und Identifikatoren dreht sich alles? Für viele Marktplätze findest du die nötigen Infos auf der Handbuchseite des Marktplatzes. Oder frag einfach im Forum nach, welche Bereiche du protokollieren musst.
+
+[.instruction]
+Optionale Protokollierung aktivieren:
+
+. Öffne das Menü *Daten » Log*. +
+→ Alle protokollierten Ereignisse des Standard-Mandanten werden angezeigt.
+. Klicke oben links in der Toolbar auf *Logs konfigurieren* (icon:cog[]). +
+→ Das Fenster *Log-Konfiguration* wird geöffnet. +
+→ Auf der linken Seite werden die Systembereiche und die installierten Plugins angezeigt.
+. Wähle den Bereich, in dem du Logs konfigurieren möchtest. +
+→ Auf der rechten Seite werden die Einstellungen für  diesen Bereich angezeigt.
+. Aktiviere die Option *Aktiv*.
+. Wähle in der Dropdown-Liste *Dauer*, wie lange Ereignisse für diesen Bereich protokolliert werden sollen.
+. Wähle in der Dropdown-Liste *Log-Level*, welche Ereignisse du protokollieren möchtest. +
+<<#log-levels, Was beuten die Log-Level?>>
+. Speichere (icon:save[role="green"]) die Einstellungen. +
+→ Die Protokollierung wird gestartet. +
+→ Die Protokollierung endet nach der eingestellten Dauer automatisch. +
+*_Wichtig:_* Wann der erste Log-Eintrag verfügbar ist hängt davon ab, wann das Ereignis das nächste Mal auftritt, das du protokollierst.
 
 [#log-levels]
 == Bedeutung der Log-Levels
