--- a/docs/de-de/modules/artikel/pages/markierungen.adoc
+++ b/docs/de-de/modules/artikel/pages/markierungen.adoc
@@ -7,9 +7,6 @@
 Willst du den Überblick über deine Produkte im Backend behalten?
 In plentymarkets ist dies durch Tags und Markierungen möglich.
 
-[discrete]
-==== Was ist der Unterschied zwischen Tags und Markierungen?
-
 [cols="1,4a"]
 |====
 
@@ -66,7 +63,49 @@ include::_includes:page$tags-creation.adoc[]
 [#550]
 === Bestehende Tags finden
 
-include::_includes:page$tags-search.adoc[]
+Nutze die Suchfunktion, um deine bereits erstellten Tags zu finden und sie weiter zu bearbeiten.
+
+. Öffne das Menü *Einrichtung » Einstellungen » Tags*.
+.. *_Möglichkeit 1_*: Klicke auf icon:search[role="darkGrey"], um direkt eine Liste aller Tags zu sehen.
+.. *_Möglichkeit 2_*: Klicke auf icon:filter_alt[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
+Siehe die Tabelle unten.
+. Nachdem du die Suche ausgeführt hast, werden dir die Ergebnisse in einer Übersicht angezeigt.
+.. *_Möglichkeit 1_*: Klicke auf ein Tag, um es zu öffnen.
+.. *_Möglichkeit 2_*: Wähle mehrere Tags aus (icon:check-square[role="blue"]) und klicke auf das Stiftsymbol (icon:pencil[role="darkGrey"]).
+Dies öffnet alle gewählten Tags gleichzeitig.
+. Nachdem das Tag geöffnet wurde, kannst du die Einstellungen weiter bearbeiten.
+
+[discrete]
+==== Suchfilter
+
+[cols="1,4a"]
+|====
+|Filter |Erläuterung
+
+| *Name*
+|Gib den Namen des Tags in der Hauptsprache deines plentymarkets Systems ein.
+
+| *Bereich*
+|Wähle einen oder mehrere Bereiche. In den Suchergebnissen werden nur die Tags angezeigt, die für diesen Bereich aktiviert wurden.
+
+| *Sprache*
+|Wähle eine oder mehrere Sprachen. In den Suchergebnissen werden nur die Tags angezeigt, deren Name in dieser Sprache gespeichert ist.
+
+|====
+
+[discrete]
+==== Steuerelemente
+
+[cols="1,4a"]
+|====
+|Element |Erläuterung
+
+| *Zurücksetzen*
+|Setzt die gewählten Filterkriterien zurück.
+
+| *Suchen*
+|Führt die Suche aus.
+|====
 
 [#600]
 === Varianten mit Tags versehen
@@ -139,70 +178,14 @@ Tags, die du mit der Hauptvariate verknüpfst, werden an die Untervarianten des 
 .*Ich kann keine Tags erstellen oder bearbeiten. Warum nicht?*
 --
 
-include::_includes:page$tags-rights.adoc[]
-
-////
 Personen mit xref:business-entscheidungen:benutzerkonten-zugaenge.adoc#10[Backend-Zugriffsrechten] können dieses Menü nur sehen, wenn ein Admin ihnen Zugriff gewährt hat.
 
 . Wende dich an eine Person mit Administratorrechten für das plentymarkets-System.
 . Diese Person öffnet das Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Benutzer*.
-. Dann öffnet sie das Benutzerkonto und schaltet die notwendigen Rechte frei.
+. Dann öffnet sie das Benutzerkonto und aktiviert das Recht:
+* *Einrichtung > Tag*.
 . *Speichere* (icon:save[role="green"]) die Einstellungen.
 . Sollte das Problem weiterhin bestehen, wende dich an die link:https://forum.plentymarkets.com/c/aenderungshistorie/604[Supporter im Forum^].
-
-[discrete]
-===== Menü-Sichtbarkeiten
-
-Dieser Bereich stellt die Menüstruktur in plentymarkets dar.
-Wähle die Menüpunkte (icon:check-square[role="blue"]), die für den Benutzer sichtbar sein sollen.
-Hast du hier ein Menü ausgewählt, werden automatisch auch die entsprechenden REST-Rechte unter *Berechtigungen* mit ausgewählt.
-
-[cols="1,1"]
-|====
-|Recht |Erläuterung
-
-| *Daten > Änderungshistorie > Suche*
-|Das Recht, die xref:daten:aenderungshistorie.adoc#200[Live-Suche] zu sehen und zu nutzen.
-
-| *Daten > Änderungshistorie > Tagesänderungen*
-|Das Recht, die xref:daten:aenderungshistorie.adoc#900[Tagesänderungen] zu sehen und zu nutzen.
-
-| *Daten > Änderungshistorie > Archiv*
-|Das Recht, das xref:daten:aenderungshistorie.adoc#1000[Archiv] zu sehen und die kostenpflichtigen Archivdateien anzufordern und herunterzuladen.
-
-| *Daten > Änderungshistorie > Einstellungen*
-|Das Recht, die xref:daten:aenderungshistorie.adoc#1100[Einstellungen der Änderungshistorie] zu sehen und zu ändern.
-|====
-
-[discrete]
-===== Berechtigungen
-
-Die REST-Rechte, die für bestimmte Aktionen benötigt werden.
-Hast du ein Menü unter *Menü-Sichtbarkeiten* ausgewählt, werden automatisch auch hier die entsprechenden REST-Rechte mit ausgewählt.
-
-[cols="1,1"]
-|====
-|Recht |Erläuterung
-
-| *Daten > Änderungshistorie > Archiv > Anfordern*
-|Das Recht, die kostenpflichtigen xref:daten:aenderungshistorie.adoc#1000[Archivdateien] anzufordern und herunterzuladen.
-
-| *Daten > Änderungshistorie > Archiv > Anzeigen*
-|Das Recht, das xref:daten:aenderungshistorie.adoc#1000[Archiv] zu sehen.
-
-| *Daten > Änderungshistorie > Einstellungen > Aktualisieren*
-|Das Recht, die xref:daten:aenderungshistorie.adoc#1100[Einstellungen der Änderungshistorie] zu ändern.
-
-| *Daten > Änderungshistorie > Einstellungen > Anzeigen*
-|Das Recht, die xref:daten:aenderungshistorie.adoc#1100[Einstellungen der Änderungshistorie] zu sehen.
-
-| *Daten > Änderungshistorie > Suche > Anzeigen*
-|Das Recht, die xref:daten:aenderungshistorie.adoc#200[Live-Suche] zu sehen und zu nutzen.
-
-| *Daten > Änderungshistorie > Tagesänderungen > Anzeigen*
-|Das Recht, die xref:daten:aenderungshistorie.adoc#900[Tagesänderungen] zu sehen und zu nutzen.
-|====
-////
 
 --
 
