--- a/docs/de-de/modules/daten/pages/datenlog.adoc
+++ b/docs/de-de/modules/daten/pages/datenlog.adoc
@@ -147,7 +147,7 @@ Damit aber Ereignisse mit den Log-Levels *Debug*, *Info*, *Notice* und *Warning*
 Optionale Protokollierung aktivieren:
 
 . Öffne das Menü *Daten » Log*. +
-→ Alle protokollierten Ereignisse des Standard-Mandanten werden angezeigt.
+→ Alle für den Standard-Mandanten protokollierten Ereignisse werden angezeigt.
 . Klicke oben links in der Toolbar auf *Logs konfigurieren* (icon:cog[]). +
 → Das Fenster *Log-Konfiguration* wird geöffnet. +
 → Auf der linken Seite werden die Systembereiche und die installierten Plugins angezeigt.
