FIX hopefully the problem that part of the content is missing

--- a/docs/de-de/modules/artikel/pages/markierungen.adoc
+++ b/docs/de-de/modules/artikel/pages/markierungen.adoc
@@ -20,11 +20,8 @@ In plentymarkets ist dies durch Tags und Markierungen möglich.
 
 *_Anwendungsbeispiele_*:
 
-* du willst den Überblick über viele verschiedene Varianten im Backend behalten.
-* du willst einige Varianten im Frontend mit Schlagworten versehen.
-
-//* Entscheide, welche Tags für Kunden im plentyShop sichtbar sein sollen.
-//* Tags können auch sogar andere Datentypen hervorheben, z.B. Kunden, Aufträge, Tickets usw.
+* Du willst den Überblick über viele verschiedene Varianten im Backend behalten.
+* Du willst einige Varianten im Frontend mit Schlagworten versehen.
 
 | xref:artikel:markierungen.adoc#100[Markierungen] +
 (werden nicht weiterentwickelt)
@@ -38,7 +35,7 @@ In plentymarkets ist dies durch Tags und Markierungen möglich.
 
 *_Anwendungsbeispiel_*:
 
-* du willst den Überblick über viele verschiedene Artikel im Backend behalten.
+* Du willst den Überblick über viele verschiedene Artikel im Backend behalten.
 
 |====
 
