--- a/docs/de-de/modules/crm/pages/messenger.adoc
+++ b/docs/de-de/modules/crm/pages/messenger.adoc
@@ -126,7 +126,7 @@ Du kannst Nachrichten jederzeit bearbeiten. Gehe dazu wie im Folgenden beschrieb
 Nachricht bearbeiten:
 
 . Öffne das Menü *CRM » Kontakte*.
-. Suche (icon:search[role="blue"]) den Kontakt anhand der Filtereinstellungen wie im Kapitel xref:crm:kontakte-verwalten.adoc#200[Kontakt suchen] beschrieben. +
+. Suche (icon:search[role="blue"]) den Kontakt anhand der Filtereinstellungen wie auf der Handbuchseite xref:crm:kontakte-verwalten.adoc#[Kontakte] im Kapitel xref:crm:kontakte-verwalten.adoc#200[Kontakt suchen] beschrieben. +
 → Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Öffne das Kontextmenü mit einem Klick auf *Aktionen* (icon:bars[]) oder mit einem Rechtsklick direkt in die Zeile des Kontakts und wähle *Messenger*. +
 icon:map-signs[] *_Oder:_* Klicke in die Zeile des Kontakts und im geöffneten Kontaktdatensatz auf der linken Seite auf *Messenger*. +
