--- a/docs/en-gb/modules/crm/pages/messenger.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger.adoc
@@ -34,7 +34,7 @@ include::_includes:page$rights.adoc[]
 include::_includes:page$tags-creation.adoc[]
 
 [TIP]
-If you want to create messages that should be *billed* via the Messenger, you have to create tags for the availability _Message (billable)_ in the same way. You have to add these tags to the <<#create-message, message>>.
+If you want to create messages that should be _billed_ via the Messenger, you have to create tags for the availability *Message (billable)* in the same way. You have to add these tags to the <<#create-message, message>>.
 
 [#create-message]
 == Creating a message
@@ -45,7 +45,7 @@ You can save as many messages for your contacts as you like.
 Creating a message:
 
 . Go to *CRM » Contacts*.
-. Search (icon:search[role="blue"])) the contact by means of the filter settings as described on the user manual page xref:crm:managing-contacts#[Contacts] in the xref:crm:managing-contacts#200[Searching for a contact] chapter. +
+. Search (icon:search[role="blue"])) the contact by means of the filter settings as described on the user manual page xref:crm:managing-contacts.adoc#[Contacts] in the xref:crm:managing-contacts.adoc#200[Searching for a contact] chapter. +
 → The contacts that correspond to the search criteria entered are displayed.
 . Open the context menu by clicking on *Action* (icon:bars[]) or with a right click in the line of the contact and select *Messenger*. +
 icon:map-signs[] *_Or:_* Click in the line of the contact and in the contact data record on the left side on *Messenger*. +
@@ -109,7 +109,7 @@ From the open contact, you can display all messages in the messenger that are sa
 Displaying messages:
 
 . Go to *CRM » Contacts*.
-. Search (icon:search[role="blue"])) the contact by means of the filter settings as described on the user manual page xref:crm:managing-contacts#[Contacts] in the xref:crm:managing-contacts#200[Searching for a contact] chapter. +
+. Search (icon:search[role="blue"])) the contact by means of the filter settings as described on the user manual page xref:crm:managing-contacts.adoc#[Contacts] in the xref:crm:managing-contacts.adoc#200[Searching for a contact] chapter. +
 → The contacts that correspond to the search criteria entered are displayed.
 . Open the context menu with a right click in the line of the contact and select *Messenger*. +
 icon:map-signs[] *_Or:_* Click in the line of the contact and in the contact data record on the left side on *Messenger*. +
@@ -126,7 +126,7 @@ You can edit messages at any time. To do so, proceed as described below.
 Editing a message:
 
 . Go to *CRM » Contacts*.
-. Search (icon:search[role="blue"]) the contact by means of the filter settings as described in the xref:crm:managing-contacts#200[Searching for a contact] chapter. +
+. Search (icon:search[role="blue"]) the contact by means of the filter settings as described on the user manual page xref:crm:managing-contacts.adoc#[Contacts] in the xref:crm:managing-contacts.adoc#200[Searching for a contact] chapter. +
 → The contacts that correspond to the search criteria entered are displayed.
 . Open the context menu by clicking on *Action* (icon:bars[]) or with a right click in the line of the contact and select *Messenger*. +
 icon:map-signs[] *_Or:_* Click in the line of the contact and in the contact data record on the left side on *Messenger*. +
