--- a/docs/de-de/modules/daten/pages/datenlog.adoc
+++ b/docs/de-de/modules/daten/pages/datenlog.adoc
@@ -4,7 +4,9 @@
 :id: 8PM1DPV
 :author: team-plenty-channel
 
-Im Menü *Daten » Log* werden Ereignisse protokolliert, die in deinem System stattfinden. Jeder Log-Eintrag steht für ein Ereignis in deinem System. Die Log-Einträge sind für vier Wochen verfügbar. Danach werden die Einträge automatisch gelöscht. Ereignisse mit den Schweregraden *Error*, *Critical*, *Alert* und *Emergency* werden automatisch protokolliert. Für andere Ereignisse kannst du optional die Protokollierung für einen bestimmten Zeitraum aktivieren.
+Im Menü *Daten » Log* werden Ereignisse protokolliert, die in deinem System stattfinden. Wenn also etwas schief gelaufen ist, kannst du im Daten-Log selbst nach dem Fehler suchen und bist nicht auf unseren Support angewiesen.
+
+Ereignisse mit den Schweregraden *Error*, *Critical*, *Alert* und *Emergency* werden automatisch protokolliert. Für andere Ereignisse kannst du optional die Protokollierung für einen bestimmten Zeitraum aktivieren.
 
 == Was ist das Daten-Log?
 
