CHANGE tag page

--- a/docs/de-de/modules/artikel/pages/markierungen.adoc
+++ b/docs/de-de/modules/artikel/pages/markierungen.adoc
@@ -4,6 +4,10 @@
 :id: EQTFNT8
 :author: team-item
 
+////
+zuletzt bearbeitet 03.05.2022
+////
+
 Willst du den Überblick über deine Produkte im Backend behalten?
 In plentymarkets ist dies durch Tags und Markierungen möglich.
 
@@ -50,7 +54,6 @@ Tags machen es möglich.
 Solche visuellen Unterstützungen helfen dir, die richtige Variante auf den ersten Blick zu finden.
 Du kannst sogar gezielt xref:artikel:suche.adoc#intable-tags[nach Varianten im Backend suchen], die ein bestimmtes Tag haben.
 * *_Schlagworte im plentyShop_*: du entscheidest, welche Tags für Kunden im plentyShop sichtbar sein sollen und welche nicht.
-//* *_Weitere Datentypen_*: du kannst Tags sogar auch verwenden, um andere Datentypen hervorzuheben, z.B. Kunden, Aufträge, Tickets usw.
 
 [#500]
 === Neue Tags erstellen
@@ -60,49 +63,7 @@ include::_includes:page$tags-creation.adoc[]
 [#550]
 === Bestehende Tags finden
 
-Nutze die Suchfunktion, um deine bereits erstellten Tags zu finden und sie weiter zu bearbeiten.
-
-. Öffne das Menü *Einrichtung » Einstellungen » Tags*.
-.. *_Möglichkeit 1_*: Klicke auf icon:search[role="darkGrey"], um direkt eine Liste aller Tags zu sehen.
-.. *_Möglichkeit 2_*: Klicke auf icon:filter_alt[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
-Siehe die Tabelle unten.
-. Nachdem du die Suche ausgeführt hast, werden dir die Ergebnisse in einer Übersicht angezeigt.
-.. *_Möglichkeit 1_*: Klicke auf ein Tag, um es zu öffnen.
-.. *_Möglichkeit 2_*: Wähle mehrere Tags aus (icon:check-square[role="blue"]) und klicke auf das Stiftsymbol (icon:pencil[role="darkGrey"]).
-Dies öffnet alle gewählten Tags gleichzeitig.
-. Nachdem das Tag geöffnet wurde, kannst du die Einstellungen weiter bearbeiten.
-
-[discrete]
-==== Suchfilter
-
-[cols="1,4a"]
-|====
-|Filter |Erläuterung
-
-| *Name*
-|Gib den Namen des Tags in der Hauptsprache deines plentymarkets Systems ein.
-
-| *Bereich*
-|Wähle einen oder mehrere Bereiche. In den Suchergebnissen werden nur die Tags angezeigt, die für diesen Bereich aktiviert wurden.
-
-| *Sprache*
-|Wähle eine oder mehrere Sprachen. In den Suchergebnissen werden nur die Tags angezeigt, deren Name in dieser Sprache gespeichert ist.
-
-|====
-
-[discrete]
-==== Steuerelemente
-
-[cols="1,4a"]
-|====
-|Element |Erläuterung
-
-| *Zurücksetzen*
-|Setzt die gewählten Filterkriterien zurück.
-
-| *Suchen*
-|Führt die Suche aus.
-|====
+include::_includes:page$tags-search.adoc[]
 
 [#600]
 === Varianten mit Tags versehen
