--- a/docs/de-de/modules/_includes/pages/tags-search.adoc
+++ b/docs/de-de/modules/_includes/pages/tags-search.adoc
@@ -6,14 +6,9 @@ Nutze die Suchfunktion, um deine bereits erstellten Tags zu finden und sie weite
 .. *_Möglichkeit 2_*: Klicke auf icon:filter_alt[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
 Siehe die Tabelle unten.
 . Nachdem du die Suche ausgeführt hast, werden dir die Ergebnisse in einer Übersicht angezeigt.
-.. *_Möglichkeit 1_*: Klicke auf ein Tag, um es zu öffnen.
-.. *_Möglichkeit 2_*: Wähle mehrere Tags aus (icon:check-square[role="blue"]) und klicke auf das Stiftsymbol (icon:pencil[role="darkGrey"]).
-Dies öffnet alle gewählten Tags gleichzeitig.
-. Nachdem das Tag geöffnet wurde, kannst du die Einstellungen weiter bearbeiten.
+. Klicke auf ein Tag, um es zu öffnen und die Einstellungen weiter zu bearbeiten.
 
-[discrete]
-==== Suchfilter
-
+.Suchfilter
 [cols="1,4a"]
 |====
 |Filter |Erläuterung
@@ -29,9 +24,7 @@ Dies öffnet alle gewählten Tags gleichzeitig.
 
 |====
 
-[discrete]
-==== Steuerelemente
-
+.Steuerelemente
 [cols="1,4a"]
 |====
 |Element |Erläuterung
@@ -55,16 +48,13 @@ Klicke dann auf icon:search[role="darkGrey"], um die Suche auszuführen.
 .. *_Möglichkeit 3_*: Klicke auf icon:tune[set=material], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
 Siehe die Tabelle unten.
 . Nachdem du die Suche ausgeführt hast, werden dir die Ergebnisse in einer Übersicht angezeigt.
-.. *_Möglichkeit 1_*: Klicke auf ein Tag, um es zu öffnen.
+.. *_Möglichkeit 1_*: Klicke auf ein Tag, um es zu öffnen und die Einstellungen weiter zu bearbeiten.
 .. *_Möglichkeit 2_*: Wähle mehrere Tags aus (icon:check-square[role="blue"]) und klicke auf das Stiftsymbol (icon:pencil[role="darkGrey"]).
-Dies öffnet alle gewählten Tags gleichzeitig.
-. Nachdem das Tag geöffnet wurde, kannst du die Einstellungen weiter bearbeiten.
+Dies öffnet alle gewählten Tags gleichzeitig und du kannst die Einstellungen weiter bearbeiten.
 
 #image::artikel:standard-suche.gif[]#
 
-[discrete]
-==== Suchfilter
-
+.Suchfilter
 [cols="1,4a"]
 |====
 |Filter |Erläuterung
@@ -91,9 +81,7 @@ Wählst du also die Verfügbarkeiten "Kategorie" und "Variante", liefert die Suc
 
 |====
 
-[discrete]
-==== Steuerelemente
-
+.Steuerelemente
 [cols="1,4a"]
 |====
 |Element |Erläuterung
@@ -150,3 +138,4 @@ Gespeicherte Filter anwenden:
 → Die Suche wird ausgeführt und die verwendeten Sucheinstellungen werden oben als so genannte "Chips" dargestellt.
 
 --
+////
