ADD old contacts ui to eol page

--- a/docs/de-de/modules/business-entscheidungen/pages/eol.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/eol.adoc
@@ -16,6 +16,12 @@ Diese Übersicht ersetzt nicht den xref:changelog:changelog.adoc#[Changelog] ode
 |====
 |Bereich/Funktion |Beendigung der Softwarepflege |Beendigung der Bereitstellungfootnote:[Datum, ab wann die Funktion nicht mehr verfügbar ist] |Weitere Informationen |Datum der Bekanntgabe
 
+|*CRM » Kontakte (veraltet)* (alte UI)
+|03.05.2022
+|schrittweise ab 03.05.2022
+|link:https://forum.plentymarkets.com/t/eol-alte-kontakte-ui-wird-abgeschaltet-eol-old-contact-ui-will-be-deactivated/679028[Link zum Forum^]
+|03.05.2022
+
 |*FTP-Server*
 |21.07.2022
 |21.07.2022
