--- a/docs/en-gb/modules/business-decisions/pages/eol.adoc
+++ b/docs/en-gb/modules/business-decisions/pages/eol.adoc
@@ -16,6 +16,12 @@ This overview does not replace the xref:changelog:changelog.adoc#[changelog] or 
 |====
 |Area/function |End of software maintenance |End of provisioningfootnote:[Date from which the function is no longer available] |Further information |Announcement date
 
+|*CRM » Contacts (deprecated)* (old UI)
+|03-May-2022
+|starting on 03-May-2022 (successive removal)
+|link:https://forum.plentymarkets.com/t/eol-alte-kontakte-ui-wird-abgeschaltet-eol-old-contact-ui-will-be-deactivated/679028[Forum link^]
+|03-May-2022
+
 |*FTP server*
 |21-Jul-2022
 |21-Jul-2022
