CHANGE search include file now displayed on other tag pages

--- a/docs/de-de/modules/crm/pages/messenger.adoc
+++ b/docs/de-de/modules/crm/pages/messenger.adoc
@@ -36,6 +36,11 @@ include::_includes:page$tags-creation.adoc[]
 [TIP]
 Wenn du Nachrichten erstellen möchtest, die über den Messenger _kostenpflichtig_ abgerechnet werden sollen, erstelle nach dem selben Schema Tags für den Bereich *Nachrichten (kostenpflichtig)*. Diese Tags musst du dann der <<#nachricht-erstellen, Nachricht>> hinzufügen.
 
+[#tags-messenger-search]
+=== Tags für den Messenger suchen
+
+include::_includes:page$tags-search.adoc[]
+
 [#nachricht-erstellen]
 == Nachricht erstellen
 
