--- a/docs/de-de/modules/warenwirtschaft/pages/umbuchungen-vornehmen.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/umbuchungen-vornehmen.adoc
@@ -102,6 +102,11 @@ include::_includes:page$tags-rights.adoc[]
 
 include::_includes:page$tags-creation.adoc[]
 
+[#450]
+==== Tags suchen
+
+include::_includes:page$tags-search.adoc[]
+
 [#500]
 === Vorlage für PO Lieferschein einrichten
 Für die Umbuchung nutzt du den speziell dafür vorgesehenen Dokumententyp *PO Lieferschein* (PO = Purchase order, dt. Bestellwesen). Dieser Lieferschein listet die in der Umbuchung vorhandenen Auftragspositionen auf. So ist der Inhalt der Umbuchung beim Aus- und Einbuchen in das Empfängerlager für Lagermitarbeiter:innen und Logistikpartner:innen nachvollziehbar.
