--- a/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
@@ -206,6 +206,11 @@ include::_includes:page$tags-rights.adoc[]
 
 include::_includes:page$tags-creation.adoc[]
 
+[#tags-suchen]
+==== Tags suchen
+
+include::_includes:page$tags-search.adoc[]
+
 [#25]
 === Rabattsystem nutzen
 
