--- a/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
+++ b/docs/de-de/modules/crm/pages/ticketsystem-nutzen.adoc
@@ -6,7 +6,7 @@
 
 Das Ticketsystem in plentymarkets bietet dir umfangreiche Funktionen zum xref:crm:ticketsystem-nutzen.adoc#1600[Erstellen], xref:crm:ticketsystem-nutzen.adoc#3400[Suchen] und xref:crm:ticketsystem-nutzen.adoc#3500[Bearbeiten] deiner Tickets. Darüber hinaus sind Funktionen zur Projektverwaltung integriert. Auf dieser Handbuchseite findest du Informationen zu den Einstellungen, die du vorab im Benutzer:innenkonto vornehmen musst, sowie zu den Einstellungen des Ticketsystems selbst im Menü *Einrichtung » CRM » Ticketsystem*.
 
-//// 
+////
 
 Je nachdem, welche plentymarkets Edition du nutzt, musst du das Ticketsystem ggf. zunächst xref:crm:ticketsystem-nutzen.adoc#100[buchen], bevor du dieses im Menü *CRM » Ticketsystem* nutzen kannst.
 
@@ -314,7 +314,7 @@ Du bearbeitest ein Thema, indem du in das Textfeld klickst. Ein Klick auf *Lösc
 Tags sind Kennzeichnungen, die du zentral in deinem plentymarkets System erstellst und anschließend für verschiedene Bereiche nutzen kannst. Wie du Tickets mit Tags versiehst und welche Benutzer:innenrechte notwendig sind, ist nachfolgend beschrieben.
 
 [#rechte-tags]
-==== Rechte für Backend-Benutzer:innen vergeben 
+==== Rechte für Backend-Benutzer:innen vergeben
 
 include::_includes:page$tags-rights.adoc[]
 
@@ -322,6 +322,11 @@ include::_includes:page$tags-rights.adoc[]
 ==== Tags erstellen
 
 include::_includes:page$tags-creation.adoc[]
+
+[#tags-suchen]
+==== Tags suchen
+
+include::_includes:page$tags-search.adoc[]
 
 [#1600]
 == Ticket erstellen
@@ -484,7 +489,7 @@ Beim ersten Import der eBay-Nachrichten werden nur die Nachrichten der vergangen
 [#2300]
 ==== Tickets aus Formularen erstellen
 
-Binde Kontaktformulare in deinen plentyShop ein, damit Interessent:innen und Kund:innen mit dir in Kontakt treten können. Besucher:innen deines plentyShops füllen die Formulare aus und diese werden dann als Ticket erstellt. 
+Binde Kontaktformulare in deinen plentyShop ein, damit Interessent:innen und Kund:innen mit dir in Kontakt treten können. Besucher:innen deines plentyShops füllen die Formulare aus und diese werden dann als Ticket erstellt.
 
 Damit die Tickets in deinem System ankommen und du anschließend aus dem Ticket antworten kannst, muss im Menü *Einrichtung » CRM » Ticketsystem » E-Mail-Konten* ein gültiges E-Mail-Konto eingerichtet sein.
 
