--- a/docs/de-de/modules/warenwirtschaft/pages/nachbestellungen-vornehmen.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/nachbestellungen-vornehmen.adoc
@@ -137,6 +137,11 @@ include::_includes:page$tags-rights.adoc[]
 
 include::_includes:page$tags-creation.adoc[]
 
+[#139]
+==== Tags suchen
+
+include::_includes:page$tags-search.adoc[]
+
 [#140]
 === Dokument Nachbestellung einrichten
 Als Bestellschein für die Nachbestellung wird der speziell dafür vorgesehene Dokumententyp *Nachbestellung* genutzt. Dieses Dokument enthält alle nachzubestellenden Artikel und wird von dir als Händler an deinen Lieferanten übermittelt. +
