add forum link to old contacts page

--- a/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
@@ -47,7 +47,7 @@ Die Bedienoberfläche zum Erstellen eines neuen Kontakts erlaubt dir viel Flexib
 | *Speichern*
 |icon:save[set=material]
 |Speichert die am Kontaktdatensatz vorgenommenen Änderungen. Auf diese Weise kannst du beliebig viele Ansichten nach deinen Wünschen speichern. +
-Wenn du das nächste Mal einen Kontaktdatensatz erstellen möchtest, kannst du die von dir bevorzugte Ansicht über die Dropdown-Liste oben rechts öffnen und mit dem Erstellen eines neuen Kontakts beginnen. Ebenfalls über diese Dropdown-Liste erstellst du mit einem Klick auf icon:plus[] *Neue Ansicht erstellen* eine neue Ansicht.
+Wenn du das nächste Mal einen Kontaktdatensatz erstellen möchtest, kannst du die von dir bevorzugte Ansicht über die Dropdown-Liste oben rechts öffnen und mit dem Erstellen eines neuen Kontakts beginnen. Ebenfalls über diese Dropdown-Liste erstellst du mit einem Klick auf icon:add[set=material] *Neue Ansicht erstellen* eine neue Ansicht.
 
 |
 |icon:more_vert[set=material]
@@ -79,7 +79,7 @@ Die folgende Handlungsanweisung beschreibt die Standardansicht mit den 3 Kompone
 Kontakt erstellen: 
 
 . Öffne das Menü *CRM » Kontakte*.
-. Klicke auf icon:plus[] *Neuer Kontakt*. +
+. Klicke auf icon:add[set=material] *Neuer Kontakt*. +
 → Die Standardansicht wird angezeigt. Die Standardansicht besteht aus 3 Bereichen: Firma, Adressdetails, Kontaktdetails.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in Tabelle <<#table-create-contact>> und die Informationen zu den bereits <<#vorausgewaehlte-felder-neuer-kontakt, vorausgewählten Feldern>>.
 . *Speichere* (icon:save[set=material]) die Einstellungen. +
