--- a/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
@@ -338,9 +338,9 @@ Weitere Informationen zu Amazon Prime- und eBay-Aufträgen findest du auf den Ha
 |Aufträge werden anhand dessen gefiltert, ob sie eine Retourenpaketnummer enthalten oder nicht. Wähle den Filter *Ja* oder *Nein* aus der Dropdown-Liste.
 
 | *Tag*
-|Dieser Filter kann nur bei Nachbestellungen, Umbuchungen und Abonnements verwendet werden, da nur diesen Auftragstypen Tags zugeordnet werden können. Wird dieser Filter genutzt, werden die Aufträge anhand der ihnen zugeordneten Tags gefiltert. Definiere nach Auswahl des Filters, welche Tags am Auftrag sein müssen, damit die Ereignisaktion für den Auftrag greift.
+|Dieser Filter kann nur bei Nachbestellungen, Umbuchungen und Abonnements verwendet werden, da nur diesen Auftragstypen xref:artikel:markierungen.adoc#400[Tags] zugeordnet werden können. Wird dieser Filter genutzt, werden die Aufträge anhand der ihnen zugeordneten Tags gefiltert. Lege mithilfe der Optionen *Aufträge mit exakt diesen Tags* und *Aufträge mit mindestens diesen Tags* fest, wie nach Tags gefiltert werden soll.
 
-| *Auftragspositionstyp*
+| *Typ der Auftragsposition*
 | Aufträge werden danach gefiltert, welche Auftragspositionstypen sie enthalten. Wähle im Filter einen Auftragspositionstyp. Wähle dann aus, ob die Ereignisaktion auf Aufträge angewendet werden soll, die diesen Typ enthalten oder auf Aufträge, die diesen Typ nicht enthalten. +
 - Enthält: Die Ereignisaktion wird auf Aufträge angewendet, die den gewählten Auftragspositionstyp enthalten. +
 - Enthält nicht: Die Ereignisaktion wird auf Aufträge angewendet, die den gewählten Auftragspositionstyp _nicht_ enthalten.
