--- a/docs/de-de/modules/daten/pages/datenlog.adoc
+++ b/docs/de-de/modules/daten/pages/datenlog.adoc
@@ -113,7 +113,7 @@ Liste der Log-Einträge filtern:
 
 . Öffne das Menü *Daten » Log*. +
 → Alle protokollierten Ereignisse des Standard-Mandanten werden angezeigt.
-. Klicke oben links in der Symbolleiste auf icon:funnel[set=material]. +
+. Klicke oben links in der Symbolleiste auf icon:filter[set=material]. +
 → Die verfügbaren Filter werden angezeigt.
 . Setze die gewünschten Filter. Beachte dazu die Erläuterungen in <<#log-filter>>. +
 *_Fehlt ein Filter in den Dropdown-Listen?_* +
