add index false attribute to old contacts page

--- a/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakte-verwalten.adoc
@@ -2,6 +2,7 @@
 :keywords: Kontakt, Kunde, Adresse, primäre Lieferadresse, primäre Rechnungsadresse, Firmen, Firma, Ustidnummer, Ust ID Nummer, Handelsvertreter, Gastzugang, Gastbestellung, eingeloggter Kunde, registrierter Kunde, regulärer Zugang, Passwort ändern, Passwortänderung, Kunde kann sich nicht einloggen, Login entsperren, Bankdaten, Kundenklasse, Kontaktklasse, Kundendaten löschen, Datensatz löschen, Kunde löschen, Kontakt löschen, Adresslayout, Kundentyp, Rabattsystem, Rabatte vergeben, Rabatte für Kundenklasse, Kontaktoption, Adressoption, Provision, Kostenstelle, Kontakte importieren, Kundendaten importieren, Kundendaten exportieren
 :description: Erfahre, wie du in plentymarkets Kontakte, Adressen und Firmen verwaltest.
 :id: KO9RPU2
+:index: false
 :author: team-crm
 
 [IMPORTANT]
@@ -497,7 +498,7 @@ Klicke anschließend auf icon:times[], um den Bearbeitungsmodus für diese Felde
 
 Mit einem Klick auf icon:ellipsis-v[] zwischen den Komponenten fügst du Spalten hinzu oder entfernst diese oder du verkleinerst bzw. vergrößerst die Spalten.
 
-[[bild-bearbeitungsmodus-neuer-kontakt]]
+[[bild-bearbeitungsmodus-spalten]]
 .Bearbeitungsmodus: Spalten hinzufügen, entfernen, vergrößern und verkleinern
 image::crm:crm_neuer_kontakt_bearbeitungsmodus.png[width=640, height=360]
 
