--- a/docs/en-gb/modules/crm/pages/managing-contacts.adoc
+++ b/docs/en-gb/modules/crm/pages/managing-contacts.adoc
@@ -2,6 +2,7 @@
 :keywords: contact, customer, address, primary delivery address, primary invoice address, company, company address, VAT number, sales representative, guest account, guest order, registered customer, change password, customer cannot log in, block login, bank details, customer class, contact class, delete customer data, delete data record, delete customer, delete contact, address layout, customer type, discount system, discount for customer class, contact option, import customers, export customers
 :description: Learn how to manage contacts and addresses in plentymarkets.
 :id: KO9RPU2
+:index: false
 :author: team-crm
 
 [IMPORTANT]
@@ -484,7 +485,7 @@ Afterwards, click on icon:times[] to close the editing mode for these fields.
 
 Click on icon:ellipsis-v[] between the components to add or remove columns or to reduce or enlarge the column sizes.
 
-[[image-editing-mode-new-contact]]
+[[image-editing-mode-columns]]
 .Editing mode: Add and remove columns and enlarge and reduce column sizes
 image::crm:crm_new_contact_editing_mode.png[width=640, height=360]
 
