--- a/docs/en-gb/modules/crm/pages/preparatory-settings.adoc
+++ b/docs/en-gb/modules/crm/pages/preparatory-settings.adoc
@@ -8,7 +8,7 @@ xref:crm:search-contact.adoc#[Searching for a contact icon:long-arrow-right[]]
 
 '''
 
-You have to carry out some preparatory settings to be able to optimally use the contact management in the *CRM » Contacts (Test phase)* menu. 
+You have to carry out some preparatory settings to be able to optimally use the contact management in the *CRM » Contacts* menu. 
 
 By clicking on an entry in the following list, you will be directly forwarded to the corresponding sub-chapter:
 
@@ -91,7 +91,7 @@ include::_includes:page$rights.adoc[]
 [#assign-rights]
 == Assigning rights for back end users
 
-:rights-purpose: pass:quotes[work with the *CRM » Contacts (Test phase)* menu]
+:rights-purpose: pass:quotes[work with the *CRM » Contacts* menu]
 :right-one: pass:quotes[*CRM > Address > Show*]
 :right-two: pass:quotes[*CRM > Contact > Show*]
 :right-three: pass:quotes[*Setup > Property > Show*]
@@ -129,7 +129,7 @@ It is recommended to create a concept for organising your customer base into typ
 
 You can create and individually configure as many customer classes as you like in the *Setup » CRM » Classes* menu. An ID is automatically assigned to customer classes. This ID is displayed to the left of the customer classes' name in the overview. However, customer classes are _not_ ordered by ID. Instead, the order is set using the option *Position*.
 
-If you create a new customer class, this customer class is available in the detail view of the contact in the *CRM » Contacts (Test phase) » [Open contact]* menu.
+If you create a new customer class, this customer class is available in the detail view of the contact in the *CRM » Contacts » [Open contact]* menu.
 
 [.instruction]
 Creating a customer class:
@@ -186,7 +186,7 @@ You can link sales prices with customer classes. Go to *Setup » Items » Sales 
 [#create-type]
 == Creating a type
 
-Types are used to classify and differentiate contacts. Some types are available by default in your plentymarkets system and _cannot_ be deleted. These types are *Customer*, *Sales representative*, *Supplier*, *Partners*, *Manufacturer* and *Interested party*. The types that you created are available in the *Type* drop-down list in the *CRM » Contacts (Test phase)* menu.
+Types are used to classify and differentiate contacts. Some types are available by default in your plentymarkets system and _cannot_ be deleted. These types are *Customer*, *Sales representative*, *Supplier*, *Partners*, *Manufacturer* and *Interested party*. The types that you created are available in the *Type* drop-down list in the *CRM » Contacts* menu.
 
 When creating a new contact data record, the type *Customer* is automatically set by default. Customers who were assigned to the type *Supplier* are available in certain drop-down lists, e.g. in a variation's *Supplier* tab.
 
@@ -252,7 +252,7 @@ After you have created the property in the *Setup » Settings » Properties » C
 [.instruction]
 Linking the property with the contact:
 
-. Go to *CRM » Contacts (Test phase)*.
+. Go to *CRM » Contacts*.
 . Search the contact by means of the filter settings. Note the explanations about the filters on the xref:crm:search-contact.adoc#[Searching for a contact] page. +
 → The contacts that correspond to the search criteria entered are displayed.
 . Click in the line of the contact to open the data record.
@@ -275,7 +275,7 @@ In order that the property is shown on your documents exactly as you want it, yo
 ====
 You can easily check whether all properties are positioned as you want it:
 
-* Open the contact data record in the *CRM » Contacts (Test phase)* menu.
+* Open the contact data record in the *CRM » Contacts* menu.
 * Click on *Orders* on the left side. +
 → The order opens in the *Orders » Edit order* menu.
 * In the order, click on the *Receipts* tab.
