update links on crm overview page

--- a/docs/en-gb/modules/crm/pages/crm.adoc
+++ b/docs/en-gb/modules/crm/pages/crm.adoc
@@ -4,7 +4,8 @@
 :id: IWIIOPV
 :author: team-crm
 
-In this area, you find all information about creating and editing xref:crm:managing-contacts.adoc#100[contact data records] – from the address via orders to tickets, documents and much more. Create xref:crm:managing-contacts.adoc#15[customer classes], xref:crm:managing-contacts.adoc#20[types] and use the xref:crm:managing-contacts.adoc#25[discount types] in plentymarkets. Manage your xref:crm:companies.adoc#[companies] and link contacts with the companies.
+In this area, you find all information about xref:crm:create-contact.adoc#[creating] and xref:crm:edit-contact.adoc#[editing] contact data records – from the address via orders to properties, documents and much more. +
+Create xref:crm:preparatory-settings.adoc#create-customer-class[customer classes], xref:crm:preparatory-settings.adoc#create-type[types] and use the xref:crm:preparatory-settings.adoc#use-discount-system[discount types] in plentymarkets. Manage your xref:crm:companies.adoc#[companies] and link contacts with the companies.
 
 Use the xref:crm:quick-search.adoc#[quick search] to retrieve at a glance all information that is saved for a contact or the address data of a guest order. In this area, you can also download - in accordance with GDPR - all data that is saved for a contact or a guest order and anonymise data records.
 
@@ -21,11 +22,11 @@ Set up a xref:crm:sending-newsletters.adoc#[newsletter] service in your system t
 [.col-md-6]
 .Managing contacts and companies
 ======
-* xref:crm:managing-contacts.adoc#15[Creating a customer class]
-* xref:crm:managing-contacts.adoc#20[Creating a customer type]
-* xref:crm:managing-contacts.adoc#100[Creating a contact]
-* xref:crm:managing-contacts.adoc#300[Editing a contact]
-* xref:crm:managing-contacts.adoc#25[Using the discount system]
+* xref:crm:preparatory-settings.adoc#create-customer-class[Creating a customer class]
+* xref:crm:preparatory-settings.adoc#create-type[Creating a customer type]
+* xref:crm:create-contact.adoc#[Creating a contact]
+* xref:crm:edit-contact.adoc#[Editing a contact]
+* xref:crm:preparatory-settings.adoc#use-discount-system[Using the discount system]
 * xref:crm:ar-list.adoc[Showing the accounts receivable list]
 * xref:crm:companies.adoc#[Managing companies]
 ======
@@ -33,7 +34,7 @@ Set up a xref:crm:sending-newsletters.adoc#[newsletter] service in your system t
 [.col-md-6]
 .Sending emails
 ======
-* <<crm/sending-emails#100, Saving the email server's login details>>
+* xref:crm:sending-emails.adoc#100[Saving the email server's login details]
 * xref:crm:sending-emails.adoc#200[Selecting the encryption for email communication]
 * xref:crm:sending-emails.adoc#1200[Creating an email template]
 * xref:crm:emailbuilder-testphase.adoc#[Creating an email template with the new EmailBuilder]
