--- a/docs/de-de/modules/crm/pages/crm.adoc
+++ b/docs/de-de/modules/crm/pages/crm.adoc
@@ -4,7 +4,8 @@
 :id: IWIIOPV
 :author: team-crm
 
-In diesem Themenbereich findest du alle Informationen zum Erstellen und Bearbeiten von xref:crm:kontakte-verwalten.adoc#100[Kontaktdatensätzen] – von der Adresse über Aufträge bis hin zu Tickets, Dokumenten u.v.m. Erstelle xref:crm:kontakte-verwalten.adoc#15[Kundenklassen] und xref:crm:kontakte-verwalten.adoc#20[Typen] und nutze das xref:crm:kontakte-verwalten.adoc#25[Rabattsystem] in plentymarkets. Verwalte deine xref:crm:firmen.adoc#[Firmen] und verknüpfe Kontakte mit den Firmen.
+In diesem Themenbereich findest du alle Informationen zum xref:crm:kontakte-erstellen.adoc#[Erstellen] und xref:crm:kontakte-bearbeiten.adoc#[Bearbeiten] von Kontaktdatensätzen – von der Adresse über Aufträge bis hin zu Eigenschaften, Dokumenten u.v.m. +
+Erstelle xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklassen] und xref:crm:vorbereitende-einstellungen.adoc#typ-erstellen[Typen] und nutze das xref:crm:vorbereitende-einstellungen.adoc#rabattsystem-nutzen[Rabattsystem] in plentymarkets. Verwalte deine xref:crm:firmen.adoc#[Firmen] und verknüpfe Kontakte mit den Firmen.
 
 Über die xref:crm:schnellsuche.adoc#[Schnellsuche] kannst du alle Informationen eines Kontakts oder die Adressdaten einer Gastbestellung auf einen Blick aufrufen. In diesem Bereich kannst du außerdem DSGVO-gemäß alle Daten zu einem Kontakt oder einer Gastbestellung herunterladen und Datensätze anonymisieren.
 
@@ -21,11 +22,11 @@ Richte einen xref:crm:newsletter-versenden.adoc#[Newsletter]-Dienst in deinem Sy
 [.col-md-6]
 .Kontakte und Firmen verwalten
 ======
-* xref:crm:kontakte-verwalten.adoc#15[Kundenklasse erstellen]
-* xref:crm:kontakte-verwalten.adoc#20[Typ erstellen]
-* xref:crm:kontakte-verwalten.adoc#100[Kontakt erstellen]
-* xref:crm:kontakte-verwalten.adoc#300[Kontakt bearbeiten]
-* xref:crm:kontakte-verwalten.adoc#25[Rabattsystem nutzen]
+* xref:crm:vorbereitende-einstellungen.adoc#kundenklasse-erstellen[Kundenklasse erstellen]
+* xref:crm:vorbereitende-einstellungen.adoc#typ-erstellen[Typ erstellen]
+* xref:crm:kontakt-erstellen.adoc#[Kontakt erstellen]
+* xref:crm:kontakt-bearbeiten.adoc#[Kontakt bearbeiten]
+* crm:vorbereitende-einstellungen.adoc#rabattsystem-nutzen[Rabattsystem nutzen]
 * xref:crm:op-liste.adoc#[Offene Posten anzeigen]
 * xref:crm:firmen.adoc#[Firmen verwalten]
 ======
