--- a/docs/de-de/modules/daten/pages/datenlog.adoc
+++ b/docs/de-de/modules/daten/pages/datenlog.adoc
@@ -1,6 +1,6 @@
 = Daten-Log
-:keywords: Log, Logs, Datenlog, Log-Einträge, Logeintrag, Log-Level, Referenztyp, Referenzwert, Logs konfigurieren
-:description: Erfahre, wie du nach Log-Einträgen suchen kannst.
+:keywords: Log, Logs, Datenlog, Log-Einträge, Logeintrag, Log-Level, Referenztyp, Referenzwert, Logs konfigurieren, Fehlermeldungen, Schweregrad, Ereignisse, Systemereignisse
+:description: Erfahre, wie du im Daten-Log nach Fehlermeldungen und Informationen zu Systemereignissen suchen kannst.
 :id: 8PM1DPV
 :author: team-plenty-channel
 
@@ -118,7 +118,7 @@ Liste der Log-Einträge filtern:
 . Setze die gewünschten Filter. Beachte dazu die Erläuterungen in <<#log-filter>>. +
 *_Fehlt ein Filter in den Dropdown-Listen?_* +
 Die Dropdown-Listen enthalten nur Filter für Ereignisse, für die es auch Log-Einträge gibt. Wenn also zum Beispiel in der Liste kein eintrag für *OTTO Market* wählbar ist, wurden in den letzten vier Wochen keine Ereignisse für diesen Marktplatz protokolliert.
-. Klicke auf icon:search[role="blue"] *Suchen*. +
+. Klicke auf icon:search[role="black"] *Suchen*. +
 → Die Log-Einträge werden gefiltert angezeigt. +
 *_Du hast den gesuchten Eintrag nicht gefunden?_* +
  Nicht alle Ereignisse werden standardmäßig protokolliert. Deshalb musst du möglicherweise <<#10, die Protokollierung für das gesuchte Ereignis erst aktivieren>>.
@@ -202,7 +202,7 @@ Optionale Protokollierung aktivieren:
 . Wähle in der Dropdown-Liste *Dauer*, wie lange Ereignisse für diesen Bereich protokolliert werden sollen.
 . Wähle in der Dropdown-Liste *Log-Level*, welche Ereignisse du protokollieren möchtest. +
 <<#log-levels, Was beuten die Log-Level?>>
-. Speichere (icon:save[role="green"]) die Einstellungen. +
+. Speichere (icon:save[role="black"]) die Einstellungen. +
 → Die Protokollierung wird gestartet. +
 → Die Protokollierung endet nach der eingestellten Dauer automatisch. +
 *_Wichtig:_* Wann der erste Log-Eintrag verfügbar ist hängt davon ab, wann das Ereignis das nächste Mal auftritt, das du protokollierst.
