--- a/docs/de-de/modules/daten/pages/datenlog.adoc
+++ b/docs/de-de/modules/daten/pages/datenlog.adoc
@@ -45,7 +45,7 @@ Daten-Log bedeutet auf Deutsch "Datenprotokoll". Im Daten-Log werden also Ereign
 * AmazonCatalog
 
 | *Referenztyp*
-| Die Art des Datensatzes: Handelt es sich zum Beispiel um eine Adress-ID, einen Katalognamen oder um die ID des Esy-Listings?
+| Die Art des Datensatzes: Handelt es sich zum Beispiel um eine Adress-ID, einen Katalognamen oder um die ID des Etsy-Listings?
 
 | *Referenzwert*
 | Der Wert des Datensatzes, der vom Ereignis betroffenen ist. Also zum Beispiel die ID eines Artikels, einer Variante oder einer Kategorie.
@@ -153,7 +153,7 @@ Die Dropdown-Listen enthalten nur Filter für Ereignisse, für die es auch Log-E
 (<<#log-levels, Was beuten die Log-Levels?>>)
 
 | *Referenztyp*
-| Die Art des Datensatzes: Handelt es sich zum Beispiel um eine Adress-ID, einen Katalognamen oder um die ID des Esy-Listings?
+| Die Art des Datensatzes: Handelt es sich zum Beispiel um eine Adress-ID, einen Katalognamen oder um die ID des Etsy-Listings?
 
 | *Referenzwert*
 | Der Wert des Datensatzes, der vom Ereignis betroffenen ist. Also zum Beispiel die ID eines Artikels, einer Variante oder einer Kategorie.
