--- a/docs/de-de/modules/daten/pages/datenlog.adoc
+++ b/docs/de-de/modules/daten/pages/datenlog.adoc
@@ -113,11 +113,11 @@ Liste der Log-Einträge filtern:
 
 . Öffne das Menü *Daten » Log*. +
 → Alle protokollierten Ereignisse des Standard-Mandanten werden angezeigt.
-. Klicke oben links in der Symbolleiste auf icon:filter[set=material]. +
+. Klicke oben links in der Symbolleiste auf icon:filter_alt[set=material]. +
 → Die verfügbaren Filter werden angezeigt.
 . Setze die gewünschten Filter. Beachte dazu die Erläuterungen in <<#log-filter>>. +
 *_Fehlt ein Filter in den Dropdown-Listen?_* +
-Die Dropdown-Listen enthalten nur Filter für Ereignisse, für die es auch Log-Einträge gibt. Wenn also zum Beispiel in der Liste kein eintrag für *OTTO Market* wählbar ist, wurden in den letzten vier Wochen keine Ereignisse für diesen Marktplatz protokolliert.
+Die Dropdown-Listen enthalten nur Filter für Ereignisse, für die es auch Log-Einträge gibt. Wenn also zum Beispiel in der Liste kein Eintrag für *OTTO Market* wählbar ist, wurden in den letzten vier Wochen keine Ereignisse für diesen Marktplatz protokolliert.
 . Klicke auf icon:search[] *Suchen*. +
 → Die Log-Einträge werden gefiltert angezeigt. +
 *_Du hast den gesuchten Eintrag nicht gefunden?_* +
@@ -159,7 +159,7 @@ Die Dropdown-Listen enthalten nur Filter für Ereignisse, für die es auch Log-E
 | Der Wert des Datensatzes, der vom Ereignis betroffenen ist. Also zum Beispiel die ID eines Artikels, einer Variante oder einer Kategorie.
 
 | *Datum vom*
-| Auf das Kalendersymbol klicken, um ein Datum zu wählen. +
+| Auf das Kalendersymbol (icon:today[set=material]) klicken, um ein Datum zu wählen. +
 → Nur Ereignisse ab diesem Datum werden in der Liste angezeigt. +
 *_Hinweis:_* Du kannst ein beliebiges Datum wählen. Beachte jedoch, dass nur Ereignisse der letzten vier Wochen angezeigt werden können. Nach vier Wochen werden Log-Einträge automatisch gelöscht.
 
@@ -169,7 +169,7 @@ Die Dropdown-Listen enthalten nur Filter für Ereignisse, für die es auch Log-E
 → Wenn du kein *Datum vom* wählst, werden Ereignisse ab dieser Uhrzeit am heutigen Tag angezeigt.
 
 | *Datum bis*
-| Auf das Kalendersymbol klicken, um ein Datum zu wählen. +
+| Auf das Kalendersymbol (icon:today[set=material]) klicken, um ein Datum zu wählen. +
 → Nur Ereignisse bis einschließlich diesem Datum werden in der Liste angezeigt. +
 *_Hinweis:_* Du kannst ein beliebiges Datum wählen. Beachte jedoch, dass nur Ereignisse der letzten vier Wochen angezeigt werden können. Nach vier Wochen werden Log-Einträge automatisch gelöscht.
 
